--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
-*{
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
   scroll-behavior: smooth;
 }
 body{
   font-family: 'Lora', serif;
-  background-image: url('back-page.jpg');
+  background-image: url('fondo.jpg');
   background-size: cover; 
   background-repeat: no-repeat; 
 }
@@ -215,6 +219,8 @@ main {
     border: 2px solid snow;
     text-align: center;
     border-radius: 5%;
+    display: flex;
+  flex-direction: column;
 }
 
 .cart-item img {
@@ -232,17 +238,17 @@ main {
   color: #fff;
   padding: 10px 20px;
   cursor: pointer;
-  border-radius: 20px; 
-  transition: background-color 0.3s ease; 
-
-  
+  border-radius: 20px;
+  transition: background-color 0.3s ease;
   font-size: 16px;
   border: none;
   outline: none;
+  margin-top: auto; 
 }
 
+
 .add-to-cart:hover {
-  background-color: #a8b9ca; 
+  background-color: #b9a8c4; 
 }
 
 
